--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -9,6 +9,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      SLACK_API: ${{ secrets.SLACK_API }}
 
     steps:
     - uses: actions/checkout@v2
@@ -23,6 +25,6 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Update
+    - name: notify
       run: |
         bash start.bash
