--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -9,14 +9,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
-        SLACK_API: ${{ secrets.SLACK_API }}
 
     - name: Install dependencies
       run: |
@@ -27,3 +26,5 @@ jobs:
     - name: notify
       run: |
           bash start.bash  "$SLACK_API"
+      env:
+          SLACK_API: ${{ secrets.SLACK_API }}
