--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -1,30 +1,30 @@
-# name: notify problem
+name: notify problem
 
-# on:
-#   schedule:
-#     - cron: '30 0 * * 1,2,3,4,5'
-#   workflow_dispatch:
+on:
+  schedule:
+    - cron: '30 0 * * 1,2,3,4,5'
+  workflow_dispatch:
 
-# jobs:
-#   build:
+jobs:
+  build:
 
-#     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Set up Python 3.9
-#       uses: actions/setup-python@v2
-#       with:
-#         python-version: 3.9
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
 
-#     - name: Install dependencies
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install flake8 pytest
-#         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-#     - name: notify
-#       run: |
-#           bash start.bash  "$SLACK_API"
-#       env:
-#           SLACK_API: ${{ secrets.SLACK_API }}
+    - name: notify
+      run: |
+          bash start.bash  "$SLACK_API"
+      env:
+          SLACK_API: ${{ secrets.SLACK_API }}
